--- a/backend/CoralTime/appsettings.json
+++ b/backend/CoralTime/appsettings.json
@@ -10,7 +10,7 @@
     //"TestConnection": "Data Source=;Initial Catalog=CoralTimeTest;User ID=;Password="
   },
 
-  "Authority": "http://localhost:5000/",
+  "Authority": "https://localhost:5001/",
 
   "AccessTokenLifetime": 600, // 10 min
   "RefreshTokenLifetime": 604800, // 7 Days
