--- a/backend/CoralTime/CoralTime.csproj
+++ b/backend/CoralTime/CoralTime.csproj
@@ -1,6 +1,6 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk.Web">
   <PropertyGroup>
-    <TargetFramework>netcoreapp2.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <MvcRazorExcludeRefAssembliesFromPublish>false</MvcRazorExcludeRefAssembliesFromPublish>
     <Version>2.0.0</Version>
   </PropertyGroup>
@@ -9,13 +9,9 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Remove="ConfigsNetCore2.0\**" />
-    <Compile Remove="wwwroot\**" />
     <Content Remove="ConfigsNetCore2.0\**" />
-    <Content Remove="wwwroot\**" />
     <EmbeddedResource Remove="ConfigsNetCore2.0\**" />
-    <EmbeddedResource Remove="wwwroot\**" />
     <None Remove="ConfigsNetCore2.0\**" />
-    <None Remove="wwwroot\**" />
   </ItemGroup>
   <ItemGroup>
     <None Remove="Content\PDF\Site.css" />
@@ -52,23 +48,23 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper.Extensions.Microsoft.DependencyInjection" Version="3.2.0" />
-    <PackageReference Include="AutoMapper" Version="6.2.2" />
     <PackageReference Include="GeekLearning.Testavior.Configuration" Version="1.3.0" />
-    <PackageReference Include="IdentityServer4" Version="2.1.1" />
     <PackageReference Include="IdentityServer4.AccessTokenValidation" Version="2.3.0" />
     <PackageReference Include="IdentityServer4.AspNetIdentity" Version="2.1.0" />
     <PackageReference Include="IdentityServer4.EntityFramework" Version="2.1.1" />
-    <PackageReference Include="Microsoft.AspNetCore.All" Version="2.0.5" />
-    <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="2.0.1" />
-    <PackageReference Include="Microsoft.AspNetCore.OData" Version="7.0.0-beta1" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="2.0.2" />
+    <PackageReference Include="Microsoft.AspNetCore.JsonPatch" Version="6.0.9" />
+    <PackageReference Include="Microsoft.AspNetCore.OData" Version="8.0.11" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Tools" Version="2.0.2" />
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="6.0.0" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="6.0.0" />
     <PackageReference Include="NETCore.MailKit" Version="2.0.2" />
-    <PackageReference Include="Newtonsoft.Json" Version="10.0.3" />
-    <PackageReference Include="NLog.Extensions.Logging" Version="1.0.0-rtm-rc7" />
     <PackageReference Include="NLog.Web.AspNetCore" Version="4.5.0-rc3" />
     <PackageReference Include="Pomelo.EntityFrameworkCore.MySql" Version="2.0.1" />
-    <PackageReference Include="Swashbuckle.AspNetCore" Version="1.1.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore" Version="6.4.0" />
+    <PackageReference Include="Microsoft.DotNet.UpgradeAssistant.Extensions.Default.Analyzers" Version="0.4.346201">
+      <PrivateAssets>all</PrivateAssets>
+    </PackageReference>
+    <PackageReference Include="Microsoft.AspNetCore.Mvc.NewtonsoftJson" Version="6.0.9" />
   </ItemGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="Microsoft.VisualStudio.Web.CodeGeneration.Tools" Version="2.0.2" />
@@ -79,10 +75,109 @@
     <MakeDir Directories="$(PublishDir)Logs" Condition="!Exists('$(PublishDir)Logs')" />
   </Target>
   <ItemGroup>
+    <None Include="wwwroot\about.module.chunk.js" />
+    <None Include="wwwroot\about.module.chunk.js.map" />
+    <None Include="wwwroot\assets\404.svg" />
+    <None Include="wwwroot\assets\ct-logo-sm.svg" />
+    <None Include="wwwroot\assets\icons\cancel.svg" />
+    <None Include="wwwroot\assets\icons\controls-hover.svg" />
+    <None Include="wwwroot\assets\icons\controls.svg" />
+    <None Include="wwwroot\assets\icons\ct.archive1.svg" />
+    <None Include="wwwroot\assets\icons\ct.clients1.svg" />
+    <None Include="wwwroot\assets\icons\ct.clients2.svg" />
+    <None Include="wwwroot\assets\icons\ct.help1.svg" />
+    <None Include="wwwroot\assets\icons\ct.help2.svg" />
+    <None Include="wwwroot\assets\icons\ct.logo.svg" />
+    <None Include="wwwroot\assets\icons\ct.manage1.svg" />
+    <None Include="wwwroot\assets\icons\ct.manage2.svg" />
+    <None Include="wwwroot\assets\icons\ct.projects1.svg" />
+    <None Include="wwwroot\assets\icons\ct.projects2.svg" />
+    <None Include="wwwroot\assets\icons\ct.reports1.svg" />
+    <None Include="wwwroot\assets\icons\ct.reports2.svg" />
+    <None Include="wwwroot\assets\icons\ct.tasks1.svg" />
+    <None Include="wwwroot\assets\icons\ct.tasks2.svg" />
+    <None Include="wwwroot\assets\icons\ct.timetracker1.svg" />
+    <None Include="wwwroot\assets\icons\ct.timetracker2.svg" />
+    <None Include="wwwroot\assets\icons\ct.users1.svg" />
+    <None Include="wwwroot\assets\icons\ct.users2.svg" />
+    <None Include="wwwroot\assets\icons\fromto.svg" />
+    <None Include="wwwroot\assets\icons\grid-settings.svg" />
+    <None Include="wwwroot\assets\icons\m.calendar.hover.svg" />
+    <None Include="wwwroot\assets\icons\m.calendar.svg" />
+    <None Include="wwwroot\assets\icons\m.email.hover.svg" />
+    <None Include="wwwroot\assets\icons\m.email.svg" />
+    <None Include="wwwroot\assets\icons\m.export.hover.svg" />
+    <None Include="wwwroot\assets\icons\m.export.svg" />
+    <None Include="wwwroot\assets\icons\m.print.hover.svg" />
+    <None Include="wwwroot\assets\icons\m.print.svg" />
+    <None Include="wwwroot\assets\icons\m.settings-hover.svg" />
+    <None Include="wwwroot\assets\icons\m.settings.svg" />
+    <None Include="wwwroot\assets\icons\runtimer.svg" />
+    <None Include="wwwroot\assets\icons\tasktile.time.actual.svg" />
+    <None Include="wwwroot\assets\icons\tasktile.time.estimated.svg" />
+    <None Include="wwwroot\assets\icons\tasktile.time.taskname.svg" />
+    <None Include="wwwroot\assets\icons\time.actual1.svg" />
+    <None Include="wwwroot\assets\icons\time.actual2.svg" />
+    <None Include="wwwroot\assets\icons\time.estimated1.svg" />
+    <None Include="wwwroot\assets\icons\time.estimated2.svg" />
+    <None Include="wwwroot\assets\icons\userpic-hover.svg" />
+    <None Include="wwwroot\assets\icons\userpic-nav.svg" />
+    <None Include="wwwroot\assets\icons\userpic.svg" />
+    <None Include="wwwroot\assets\icons\users.hover.svg" />
+    <None Include="wwwroot\assets\icons\users.svg" />
+    <None Include="wwwroot\assets\loginbgcut.svg" />
+    <None Include="wwwroot\assets\primeng.svg" />
+    <None Include="wwwroot\calendar.module.chunk.js" />
+    <None Include="wwwroot\calendar.module.chunk.js.map" />
+    <None Include="wwwroot\clients.module.chunk.js" />
+    <None Include="wwwroot\clients.module.chunk.js.map" />
+    <None Include="wwwroot\common.chunk.js" />
+    <None Include="wwwroot\common.chunk.js.map" />
+    <None Include="wwwroot\fontawesome-webfont.912ec66d7572ff821749.svg" />
+    <None Include="wwwroot\fontawesome-webfont.af7ae505a9eed503f8b8.woff2" />
+    <None Include="wwwroot\home.module.chunk.js" />
+    <None Include="wwwroot\home.module.chunk.js.map" />
+    <None Include="wwwroot\inline.bundle.js" />
+    <None Include="wwwroot\inline.bundle.js.map" />
+    <None Include="wwwroot\login.module.chunk.js" />
+    <None Include="wwwroot\login.module.chunk.js.map" />
+    <None Include="wwwroot\main.bundle.js" />
+    <None Include="wwwroot\main.bundle.js.map" />
+    <None Include="wwwroot\polyfills.bundle.js" />
+    <None Include="wwwroot\polyfills.bundle.js.map" />
+    <None Include="wwwroot\profile.module.chunk.js" />
+    <None Include="wwwroot\profile.module.chunk.js.map" />
+    <None Include="wwwroot\projects.module.chunk.js" />
+    <None Include="wwwroot\projects.module.chunk.js.map" />
+    <None Include="wwwroot\reports.module.chunk.js" />
+    <None Include="wwwroot\reports.module.chunk.js.map" />
+    <None Include="wwwroot\roboto-v15-latin-regular.3d3a53586bd78d1069ae.svg" />
+    <None Include="wwwroot\roboto-v15-latin-regular.7e367be02cd17a96d513.woff2" />
+    <None Include="wwwroot\scripts.bundle.js" />
+    <None Include="wwwroot\scripts.bundle.js.map" />
+    <None Include="wwwroot\set-password.module.chunk.js" />
+    <None Include="wwwroot\set-password.module.chunk.js.map" />
+    <None Include="wwwroot\signin-oidc.module.chunk.js" />
+    <None Include="wwwroot\signin-oidc.module.chunk.js.map" />
+    <None Include="wwwroot\styles.bundle.js" />
+    <None Include="wwwroot\styles.bundle.js.map" />
+    <None Include="wwwroot\tasks.module.chunk.js" />
+    <None Include="wwwroot\tasks.module.chunk.js.map" />
+    <None Include="wwwroot\users.module.chunk.js" />
+    <None Include="wwwroot\users.module.chunk.js.map" />
+    <None Include="wwwroot\vendor.bundle.js" />
+    <None Include="wwwroot\vendor.bundle.js.map" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\CoralTime.BL\CoralTime.BL.csproj" />
     <ProjectReference Include="..\CoralTime.Common\CoralTime.Common.csproj" />
     <ProjectReference Include="..\CoralTime.DAL\CoralTime.DAL.csproj" />
     <ProjectReference Include="..\CoralTime.MySqlMigrations\CoralTime.MySqlMigrations.csproj" />
     <ProjectReference Include="..\CoralTime.ViewModels\CoralTime.ViewModels.csproj" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Update="coraltime.pfx">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 </Project>
