--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "ng2-file-upload": "1.2.1",
     "ng2-img-cropper": "0.9.0",
     "ngx-slimscroll": "3.7.0",
+    "node-sass": "^4.14.1",
     "primeng": "5.2.3",
     "rxjs": "5.5.6",
     "zone.js": "0.8.4"
